# mavlink_study

./: CMakeLists.txt  README.md
include/comm/: generic_port.h  mavlink_messages.h  read_data_impl.cpp  read_data_impl.h  serial_port.cpp  serial_port.h
src/: mavlink_read_data_impl.cpp
